--- a/src/assets/css/sass/themes/gogo.light.purple.scss
+++ b/src/assets/css/sass/themes/gogo.light.purple.scss
@@ -32,8 +32,8 @@ $shadowOffsetsBottom : 1 3 6 10 15;
 $shadowBlursBottom: 3 6 6 5 6;
 $shadowOpacitiesBottom: 0.04 0.1 0.2 0.22 0.22;
 
-$backgroundPath: "/assets/img/logo-black.svg";
-$backgroundPathMobile: "/assets/img/logo-mobile.svg";
+$backgroundPath: "/assets/img/beasy/logo3.png";
+$backgroundPathMobile: "/assets/img/beasy/logo3.png";
 
 @import "../_mixins.scss";
 @import "../_gogo.style.scss";
