resizing logo + male/female icons

--- a/src/assets/css/sass/_gogo.style.scss
+++ b/src/assets/css/sass/_gogo.style.scss
@@ -1546,11 +1546,12 @@ button {
   }
 
   .navbar-logo {
-    height: 75px;
+    height: 100px;
     position: absolute;
     left: 0;
     right: 0;
     margin: 0 auto;
+    width: 220px;
 
     .logo {
       width: 100%;
