changing images in home page

--- a/src/assets/css/sass/themes/gogo.dark.blue.scss
+++ b/src/assets/css/sass/themes/gogo.dark.blue.scss
@@ -32,8 +32,8 @@ $shadowBlursBottom: 3 6 6 5 6;
 $shadowOpacitiesBottom: 0.1 0.3 0.6 0.7 0.8;
 
 
-$backgroundPath: "/assets/img/beasy/logo4.png";
-$backgroundPathMobile: "/assets/img/beasy/logo4.png";
+$backgroundPath: "/assets/img/beasy/core/logo3.png";
+$backgroundPathMobile: "/assets/img/beasy/core/logo3.png";
 
 @import "../_mixins.scss";
 @import "../_gogo.style.scss";
