--- a/src/assets/css/sass/themes/gogo.dark.green.scss
+++ b/src/assets/css/sass/themes/gogo.dark.green.scss
@@ -31,8 +31,8 @@ $shadowOffsetsBottom : 1 3 6 10 15;
 $shadowBlursBottom: 3 6 6 5 6;
 $shadowOpacitiesBottom: 0.1 0.3 0.6 0.7 0.8;
 
-$backgroundPath: "/assets/img/beasy/logo4.png";
-$backgroundPathMobile: "/assets/img/beasy/logo4.png";
+$backgroundPath: "/assets/img/beasy/core/logo3.png";
+$backgroundPathMobile: "/assets/img/beasy/core/logo3.png";
 
 @import "../_mixins.scss";
 @import "../_gogo.style.scss";
