--- a/src/assets/css/sass/_gogo.style.scss
+++ b/src/assets/css/sass/_gogo.style.scss
@@ -136,7 +136,7 @@ body {
 }
 
 .fixed-background {
-  background: url("/assets/img/balloon.jpg") no-repeat center center fixed;
+  background: url("/assets/img/beasy/core/login-background.jpg") no-repeat center center fixed;
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -246,8 +246,8 @@ hr {
 }
 
 .logo-single {
-  width: 110px;
-  height: 35px;
+  width: 220px;
+  height: 100px;
   background: url($backgroundPath) no-repeat;
   background-position: center center;
   display: inline-block;
@@ -4733,7 +4733,7 @@ input:-webkit-autofill {
   @include depth(1);
   .image-side {
     width: 40%;
-    background: url("/assets/img/login-balloon.jpg") no-repeat center top;
+    background: url("/assets/img/beasy/core/login-background.jpg") no-repeat center top;
     background-size: cover;
     padding: 80px 40px;
     .h3 {
